tests/baselines/reference/deleteReadonly.errors.txt
tests/cases/compiler/deleteReadonly.ts(8,8): error TS2699: The operand of a delete operator cannot be a read-only property
tests/cases/compiler/deleteReadonly.ts(18,8): error TS2699: The operand of a delete operator cannot be a read-only property


==== tests/cases/compiler/deleteReadonly.ts (2 errors) ====
    interface A {
      readonly b
    }
    var a: A = {
      b: 123
    };
    
    delete a.b;
           ~~~
!!! error TS2699: The operand of a delete operator cannot be a read-only property
    
    interface B {
      readonly [k: string]: string
    }
    
    var b: B = {
      'test': 'test'
    };
    
    delete b['test'];
           ~~~~~~~~~
!!! error TS2699: The operand of a delete operator cannot be a read-only property
    